added basic react layout components

--- a/sugarclient/public/main.html
+++ b/sugarclient/public/main.html
@@ -29,9 +29,9 @@
         <div class="row">
           <h5 class="header col s12 light black-text">SIdebar stuff</h5>
           <ul id="dropdown2" class="dropdown-content">
-            <li><a href=#>link</a></li>
-            <li><a href=#>link</a></li>
-            <li><a href=#>link</a></li>
+            <li><a href=#>about</a></li>
+            <li><a href=#>tools</a></li>
+            <li><a href=#>things</a></li>
           </ul>
           <a class="dropdown-button col s12" href="#!" data-activates="dropdown2"><i
               class="medium material-icons">menu</i>
@@ -113,6 +113,3 @@
 </body>
 
 </html>
-
-}
--->
