--- a/sugarclient/public/main.html
+++ b/sugarclient/public/main.html
@@ -74,39 +74,39 @@
     <div class="row">
       <div class="col s3">
         <div class="center promo promo-example">
-          <i class="large material-icons">stuff</i>
+          <i class="medium material-icons">stuff</i>
           <h5 class="promo-caption"><a href=# target="_blank">Link</a>
           </h5>
         </div>
       </div>
       <div class="col s3">
         <div class="center promo promo-example">
-          <i class="large material-icons">link</i>
+          <i class="medium material-icons">link</i>
           <h5 class="promo-caption">link</h5>
           <p class="light center"></p>
         </div>
       </div>
       <div class="col s3">
         <div class="center promo promo-example">
-          <i class=" large material-icons">work</i>
+          <i class=" medium material-icons">work</i>
           <h5 class="promo-caption"><a href=# target="_blank">link</a></h5>
         </div>
       </div>
       <div class="col s3">
         <div class="center promo promo-example">
-          <i class=" large material-icons">stuff</i>
+          <i class=" medium material-icons">stuff</i>
           <h5 class="promo-caption"><a href=# target="_blank">link</a></h5>
           <p class="light center"></p>
         </div>
       </div>
     </div>
   </div>
-  <br><br>
+  <!-- <br><br>
   <footer class="black page-footer">
     <div class="container">
       <p class="white-text center">Made by Synatic Sugar &copy</p>
     </div>
-  </footer>
+  </footer> -->
 
   <script src="assets/js/logic.js"></script>
 
